[package]
name = "pi_serv"
version = "0.2.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
log = "0.4"
env_logger = "0.8"
futures = "0.3"
parking_lot = "0.11"
clap = "2.33"
num_cpus = "1.13"
async = { path = "../pi_lib/async" }
async_file = { path = "../pi_lib/async_file" }
vm_core = { path = "../pi_v8/vm_core" }
vm_builtin = { path = "../pi_v8/vm_builtin" }
hash = { path = "../pi_lib/hash" }
tcp = { path = "../pi_net/tcp" }
ws = { path = "../pi_net/ws" }
